# agentic-canvas

./: .gitignore  README.md  pyproject.toml
apps/api/agentic_canvas_api/: __init__.py  __main__.py  app.py
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
src/agentic_canvas/: __init__.py  __main__.py
src/agentic_canvas/cli/: __init__.py  app.py
src/agentic_canvas/kernel/: context.py  decision.py  manifest_registry.py  plugin_bootloader.py  plugin_protocol.py  plugin_runner.py  plugin_runner_base.py  plugin_subprocess.py  run.py  run_lifecycle.py  run_state.py  run_store.py  storage.py  trigger.py  workspace.py
src/agentic_canvas/libraries/: __init__.py  manifest.py  registry.py
src/agentic_canvas/orchestrator/: __init__.py  orchestrator.py
src/agentic_canvas/plugins/: __init__.py  manifest.py  registry.py
src/agentic_canvas/providers/: __init__.py  base.py  factory.py  gemini.py  local.py  openai_compatible.py
src/agentic_canvas/workspace_template/: .env.example  orchestrator.system_prompt  workspace.json
src/agentic_canvas/workspace_template/commands/conversation/: manifest.json
src/agentic_canvas/workspace_template/libs/agent_runtime/: __init__.py  agent.py  manifest.json  models.py  tools.py
src/agentic_canvas/workspace_template/libs/command_packs/: __init__.py  manifest.json
tests/: __init__.py  support.py  test_api_app.py  test_architecture_contracts.py  test_kernel_events.py  test_kernel_refactor_units.py  test_workspace_llm_agent.py
(+44 files in other folders)
