[project]
name = "agentic-canvas"
version = "0.1.0"
description = "Agentic Canvas kernel, plugin runtime, and workspace template"
readme = "README.md"
authors = [
    { name = "vcppson", email = "vcppson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
agentic-canvas = "agentic_canvas.cli.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
